--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">World's Best Lasagna</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/garlic_chicken.html">Garlic Fried Chicken</a></li>
+        <li><a href="recipes/carne_asada_tacos.html">Carne Asasda Tacos</a></li>
+
+    </ul>
 </body>
 </html>
