Complete carne asada tacos webpage

--- a/recipes/carne_asada_tacos.html
+++ b/recipes/carne_asada_tacos.html
@@ -4,31 +4,60 @@
     <title>Carne Asada Tacos</title>
     <body>
         <h1>Carne Asada Tacos</h1>
-        <img src="lasagna.jpg" alt="Finished Lasagna Dish" height="300" width="400">
+        <img src="Carne_Asada_Tacos.jpg" alt="Carne Asada Tacos" height="350" width="400">
         <h3>Description</h3>
-            <p>Lasagna, also known as lasagne (Italian) is a type of pasta, possibly one of the oldest types, made in very wide, flat sheets. In Italian cuisine it is made of stacked layers of pasta alternating with fillings such as ragù (ground meats and tomato sauce), béchamel sauce, vegetables, cheeses (which may include ricotta, mozzarella, and Parmesan), and seasonings and spices. The dish may be topped with grated cheese, which melts during baking. Typically cooked pasta is assembled with the other ingredients and then baked in an oven (al forno). The resulting baked pasta is cut into single-serving square or rectangular portions. 
+            <p>
+                These carne asada tacos made with tender strips of flank steak, served on soft corn tortillas are as good as you get at a taqueria. So delicious topped with onion relish and homemade tomato salsa!
             </p>
         <h3>Ingredients</h3>
         <ul>
-            <li><b>Meat: </b>This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
-            <li><b>Onion and Garlic: </b> An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
-            <li><b>Tomato Products: </b>You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
-            <li><b>Sugar: </b>Two tablespoons of white sugar add subtle sweetness and enhance the flavor of the sauce.</li>
-            <li><b>Spices and Seasonings: </b>This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper.</li>
-            <li><b>Lasagna Noodles: </b>Use store-bought or homemade lasagna noodles.</li>
-            <li><b>Cheeses: </b>Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
-            <li><b>Egg: </b>An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
+            <li>3 pounds flank steak</li>
+            <li>1 (32 oz) package corn tortillas</li>
+            <li>2 cups grated cotija cheese (Optional)</li>
+            <li>2 limes, cut into wedges</li>
+        </ul>
+        <h4>Marinade:</h4>
+        <ul>
+            <li>1/2 cup soy sauce</li>
+            <li>1/2 cup olive oil</li>
+            <li>1/3 cup white vinegar</li>
+            <li>4 cloves garlic, minced</li>
+            <li>2 limes, juiced</li>
+            <li>1 tsp salt</li>
+            <li>1 tsp ground black pepper</li>
+            <li>1 tsp ground white pepper</li>
+            <li>1 tsp garlic powder</li>
+            <li>1 tsp chili powder</li>
+            <li>1 tsp dried oregano</li>
+            <li>1 tsp ground cumin</li>
+            <li>1 tsp paprika</li>
+        </ul>
+        <h4>Onion Relish:</h4>
+        <ul>
+            <li>1 white onion, chopped</li>
+            <li>1/2 cup chopped fresh cilantro</li>
+            <li>1 lime, juiced</li>
+        </ul>
+        <h4>Salsa:</h4>
+        <ul>
+            <li>4 dried New Mexico chili pods</li>
+            <li>2 large tomatoes, chopped</li>
+            <li>1 white onion, quartered</li>
+            <li>4 cloves garlic, peeled</li>
+            <li>2 jalapeno peppers, chopped</li>
+            <li>1 pinch salt and black pepper</li>
         </ul>
         <h3>Steps</h3>
         <ol>
-            <li>Make the meat sauce.</li>
-            <li>Cook the noodles.</li>
-            <li>Make the ricotta mixture.</li>
-            <li>Layer the lasagna according to the recipe instructions.</li>
-            <li>Cover with foil and bake.</li>
-            <li>Let the lasagna rest before serving.</li>
+            <li>Lay flank steak in a large glass baking dish.</li>
+            <li>Make the marinade: Whisk soy sauce, oil, vinegar, 4 cloves of garlic, juice of two limes, salt, black pepper, white pepper, garlic powder, chili powder, oregano, cumin, and paprika together in a bowl until well blended; pour over steak, turning to coat both sides. Cover the dish with plastic wrap and marinate in the refrigerator for 1 to 8 hours. </li>
+            <li>Make the relish: Stir onion, cilantro, and lime juice together in a small bowl. Set aside. </li>
+            <li>Make the salsa: Preheat the oven to 450 degrees F (230 degrees C). Heat a skillet over medium-high heat. Add chile pods and toast for a few minutes; transfer pods to a bowl of water and soak for 30 minutes. </li>
+            <li>Place tomatoes, 1 onion, 4 cloves of garlic, and jalapeños onto a baking sheet. Roast in the preheated oven until vegetables are toasted, about 20 minutes. </li>
+            <li>Transfer vegetables into a blender or food processor. Add soaked chiles, salt, and pepper; puree until smooth. </li>
+            <li>Remove steak from the marinade and shake off excess. Discard the remaining marinade. Cut the marinated flank steak into cubes or strips. Heat vegetable oil in a large skillet over medium-high heat. Add steak; cook and stir until cooked through and most of the liquid has evaporated. </li>
+            <li>Warm tortillas in a dry skillet over low heat for about a minute on each side. </li>
+            <li>Place some steak on each tortilla; top with relish and prepared salsa. Sprinkle with cotija cheese. Garnish with lime wedges and serve. </li>
         </ol>
-        <h3>Cooking Time</h3>
-        <p>The assembled lasagna should take about 50 minutes to cook in an oven preheated to 375 degrees F. Cover it with foil for the first 25 minutes, then let it cook uncovered for the final 25 minutes. Also, it's important to let the lasagna rest at room temperature for about 15 minutes before you cut into it. </p>
     </body>
 </html>
