Update recipe files

--- a/recipes/carne_asada_tacos.html
+++ b/recipes/carne_asada_tacos.html
@@ -4,7 +4,7 @@
     <title>Carne Asada Tacos</title>
     <body>
         <h1>Carne Asada Tacos</h1>
-        <img src="Carne_Asada_Tacos.jpg" alt="Carne Asada Tacos" height="350" width="400">
+        <img src="carne_asada_tacos.jpg" alt="Carne Asada Tacos" height="350" width="400">
         <h3>Description</h3>
             <p>
                 These carne asada tacos made with tender strips of flank steak, served on soft corn tortillas are as good as you get at a taqueria. So delicious topped with onion relish and homemade tomato salsa!
@@ -47,7 +47,7 @@
             <li>2 jalapeno peppers, chopped</li>
             <li>1 pinch salt and black pepper</li>
         </ul>
-        <h3>Steps</h3>
+        <h3>Directions</h3>
         <ol>
             <li>Lay flank steak in a large glass baking dish.</li>
             <li>Make the marinade: Whisk soy sauce, oil, vinegar, 4 cloves of garlic, juice of two limes, salt, black pepper, white pepper, garlic powder, chili powder, oregano, cumin, and paprika together in a bowl until well blended; pour over steak, turning to coat both sides. Cover the dish with plastic wrap and marinate in the refrigerator for 1 to 8 hours. </li>
