--- a/recipes/garlic_chicken.html
+++ b/recipes/garlic_chicken.html
@@ -4,31 +4,30 @@
     <title>Garlic Fried Chicken</title>
     <body>
         <h1>Garlic Fried Chicken</h1>
-        <img src="lasagna.jpg" alt="Finished Lasagna Dish" height="300" width="400">
+        <img src="garlic_fried_chicken.jpg" alt="Garlic Fried Chicken Dish" height="450" width="300">
         <h3>Description</h3>
-            <p>Lasagna, also known as lasagne (Italian) is a type of pasta, possibly one of the oldest types, made in very wide, flat sheets. In Italian cuisine it is made of stacked layers of pasta alternating with fillings such as ragù (ground meats and tomato sauce), béchamel sauce, vegetables, cheeses (which may include ricotta, mozzarella, and Parmesan), and seasonings and spices. The dish may be topped with grated cheese, which melts during baking. Typically cooked pasta is assembled with the other ingredients and then baked in an oven (al forno). The resulting baked pasta is cut into single-serving square or rectangular portions. 
+            <p>
+                Fried Garlic Chicken is a crispy fried chicken in a thick, sweet, savoury, garlicky sauce; this dish is most certainly for the garlic lover.
             </p>
         <h3>Ingredients</h3>
         <ul>
-            <li><b>Meat: </b>This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
-            <li><b>Onion and Garlic: </b> An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
-            <li><b>Tomato Products: </b>You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
-            <li><b>Sugar: </b>Two tablespoons of white sugar add subtle sweetness and enhance the flavor of the sauce.</li>
-            <li><b>Spices and Seasonings: </b>This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper.</li>
-            <li><b>Lasagna Noodles: </b>Use store-bought or homemade lasagna noodles.</li>
-            <li><b>Cheeses: </b>Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
-            <li><b>Egg: </b>An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
+            <li>2 tsps garlic powder</li>
+            <li>1 tsp ground black pepper</li>
+            <li>1 tsp salt</li>
+            <li>1 tsp paprika</li>
+            <li>1/2 cup seasoned bread crumbs</li>
+            <li>1 cup all-purpose flour</li>
+            <li>1/2 cup milk</li>
+            <li>1 egg</li>
+            <li>4 skinless, boneless chicken breast halves - pounded thin</li>
+            <li>1 cup oil for frying</li>
         </ul>
-        <h3>Steps</h3>
+        <h3>Directions</h3>
         <ol>
-            <li>Make the meat sauce.</li>
-            <li>Cook the noodles.</li>
-            <li>Make the ricotta mixture.</li>
+            <li>In a shallow dish, mix together the garlic powder, pepper, salt, paprika, bread crumbs and flour. In a separate dish, whisk together the milk and egg. </li>
+            <li>Heat the oil in an electric skillet set to 350 degrees F (175 degrees C). Dip the chicken into the egg and milk, then dredge in the dry ingredients until evenly coated. </li>
+            <li>Fry chicken in the hot oil for about 5 minutes per side, or until the chicken is cooked through and juices run clear. Remove from the oil with a slotted spatula, and serve. </li>
             <li>Layer the lasagna according to the recipe instructions.</li>
-            <li>Cover with foil and bake.</li>
-            <li>Let the lasagna rest before serving.</li>
         </ol>
-        <h3>Cooking Time</h3>
-        <p>The assembled lasagna should take about 50 minutes to cook in an oven preheated to 375 degrees F. Cover it with foil for the first 25 minutes, then let it cook uncovered for the final 25 minutes. Also, it's important to let the lasagna rest at room temperature for about 15 minutes before you cut into it. </p>
     </body>
 </html>
