--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -19,7 +19,7 @@
             <li><b>Cheeses: </b>Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
             <li><b>Egg: </b>An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
         </ul>
-        <h3>Steps</h3>
+        <h3>Directions</h3>
         <ol>
             <li>Make the meat sauce.</li>
             <li>Cook the noodles.</li>
