--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="recipe-names">
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/garlic_chicken.html">Garlic Fried Chicken</a></li>
         <li><a href="recipes/carne_asada_tacos.html">Carne Asasda Tacos</a></li>
