Add css elements to webpages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 id="home-title">Odin Recipes</h1>
     <ul class="recipe-names">
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/garlic_chicken.html">Garlic Fried Chicken</a></li>
