--- a/recipes/carne_asada_tacos.html
+++ b/recipes/carne_asada_tacos.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="../style.css"
     <meta charset="UTF-8">
     <title>Carne Asada Tacos</title>
     <body>
         <h1>Carne Asada Tacos</h1>
         <img src="carne_asada_tacos.jpg" alt="Carne Asada Tacos" height="350" width="400">
         <h3>Description</h3>
-            <p>
+            <p class="description">
                 These carne asada tacos made with tender strips of flank steak, served on soft corn tortillas are as good as you get at a taqueria. So delicious topped with onion relish and homemade tomato salsa!
             </p>
         <h3>Ingredients</h3>
