--- a/recipes/garlic_chicken.html
+++ b/recipes/garlic_chicken.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="../style.css"
     <meta charset="UTF-8">
     <title>Garlic Fried Chicken</title>
     <body>
         <h1>Garlic Fried Chicken</h1>
         <img src="garlic_fried_chicken.jpg" alt="Garlic Fried Chicken Dish" height="450" width="300">
         <h3>Description</h3>
-            <p>
+            <p class="description">
                 Fried Garlic Chicken is a crispy fried chicken in a thick, sweet, savoury, garlicky sauce; this dish is most certainly for the garlic lover.
             </p>
         <h3>Ingredients</h3>
