--- a/recipes/carne_asada_tacos.html
+++ b/recipes/carne_asada_tacos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Carne Asada Tacos</title>
     <body>
-        <h1>Carne Asada Tacos</h1>
+        <h1 class="title">Carne Asada Tacos</h1>
         <img src="carne_asada_tacos.jpg" alt="Carne Asada Tacos" height="350" width="400">
         <h3>Description</h3>
             <p class="description">
