--- a/recipes/garlic_chicken.html
+++ b/recipes/garlic_chicken.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Garlic Fried Chicken</title>
     <body>
-        <h1>Garlic Fried Chicken</h1>
+        <h1 class="title">Garlic Fried Chicken</h1>
         <img src="garlic_fried_chicken.jpg" alt="Garlic Fried Chicken Dish" height="450" width="300">
         <h3>Description</h3>
             <p class="description">
