--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Lasagna</title>
     <body>
-        <h1>Lasagna</h1>
-        <img src="lasagna.jpg" alt="Finished Lasagna Dish" height="300" width="400">
+        <h1 class="title">Lasagna</h1>
+        <img src="lasagna.jpg" alt="Finished Lasagna Dish" height="auto" width="400">
         <h3>Description</h3>
         <p class="description">Lasagna, also known as lasagne (Italian) is a type of pasta, possibly one of the oldest types, made in very wide, flat sheets. In Italian cuisine it is made of stacked layers of pasta alternating with fillings such as ragù (ground meats and tomato sauce), béchamel sauce, vegetables, cheeses (which may include ricotta, mozzarella, and Parmesan), and seasonings and spices. The dish may be topped with grated cheese, which melts during baking. Typically cooked pasta is assembled with the other ingredients and then baked in an oven (al forno). The resulting baked pasta is cut into single-serving square or rectangular portions. 
         </p>
